--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="navbar">
             <div class="left-navbar">
                 <a href="index.html">
-                    <img src="images/logo_navbar_transparent.PNG"height = 50/>
+                    <img src="images/logo_navbar_transparent.png" height = 50/>
                 </a>
             </div>
             <div class="right-navbar">
