--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF8">
     <title>Homepage</title>
+    <link rel="shortcut icon" type="image/png" href="images/icon_final.png">
     <link rel="stylesheet" href="styles-home.css">
     <link rel="stylesheet" href="styles-home-cube.css">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
