--- a/contactinfo.html
+++ b/contactinfo.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Profile</title>
-    <link rel="stylesheet" href="contact.css">
+    <link rel="stylesheet" href="CSS/contact.css">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 <body>
@@ -19,13 +19,13 @@
                     <a href="index.html">Home</a>
                 </div>
                 <div class="nav-link">
-                    <a href="#">Projects</a>
+                    <a href="projects.html">Projects</a>
                 </div>
                 <div class="nav-link">
-                    <a href="#">Profile</a>
+                    <a href="profile.html">Profile</a>
                 </div>
                 <div class="nav-link">
-                    <a href="#">Blogs</a>
+                    <a href="blogs.html">Blogs</a>
                 </div>
                 <div class="nav-link1">
                     <a href="contactinfo.html">Contact</a>
@@ -61,10 +61,10 @@
                 <p>Feel free to drop a message. I am always up for an interesting conversation :)</p>
                 <form id="gform" name="gform" target="hidden_iframe" onsubmit="submitted=true;" action="https://docs.google.com/forms/d/e/1FAIpQLSfrrgGkQSRehMIn6cEu8RG4a26mnie9QJmVKhi5otnZf0ly1Q/formResponse?">
                     <div class="input-box">
-                        <input type="text" name="entry.1708094709" id="entry.1708094709" placeholder="Enter your name">
+                        <input type="text" name="entry.1708094709" id="entry.1708094709" placeholder="Name">
                     </div>
                     <div class="input-box">
-                        <input type="text" name="entry.1678461896" id="entry.1678461896" placeholder="Enter your email">
+                        <input type="text" name="entry.1678461896" id="entry.1678461896" placeholder="Email">
                     </div>
                     <div class="input-box message-box">
                         <textarea name="entry.1079590588" id="entry.1079590588" rows="8" cols="80" placeholder="Message"></textarea>
