--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta charset="UTF8">
     <title>Homepage</title>
     <link rel="shortcut icon" type="image/png" href="images/icon_final.png">
-    <link rel="stylesheet" href="styles-home.css">
-    <link rel="stylesheet" href="styles-home-cube.css">
+    <link rel="stylesheet" href="CSS/styles-home.css">
+    <link rel="stylesheet" href="CSS/styles-home-cube.css">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 <body>
@@ -23,13 +23,13 @@
                     <a href="index.html">Home</a>
                 </div>
                 <div class="nav-link">
-                    <a href="#">Projects</a>
+                    <a href="projects.html">Projects</a>
                 </div>
                 <div class="nav-link">
-                    <a href="#">Profile</a>
+                    <a href="profile.html">Profile</a>
                 </div>
                 <div class="nav-link">
-                    <a href="#">Blogs</a>
+                    <a href="blogs.html">Blogs</a>
                 </div>
                 <div class="nav-link">
                     <a href="contactinfo.html">Contact</a>
@@ -41,8 +41,8 @@
                 <div class="p1text">
                     <h2>STUDENT <span>Researcher</span></h2>
                     <h3>Hi! I am Material Science and Aerospace Engineering Student<br> My research interests are 
-                    Computational Fluid Dynamics, <br> Propulsion and Orbital Dynamics </h3>
-                    <a href="#" class="p1button">Resume</a>
+                    Spacecraft Thermal Control Systems, <br> Propulsion and Orbital Dynamics </h3>
+                    <a href="PDF_Documents/Vishrant_CV.pdf" target="_blank" class="p1button">Resume</a>
                 </div>
                 <div class="p1cube">
                     <div class="cube">
@@ -79,15 +79,15 @@
                                     11.013 0 0 0 16 2zm0 15a4 4 0 1 1 4-4a4.005 4.005 0 0 1-4 4z" fill="#000000"/>
                                     <circle id="IconifyId-179eb217c7e-992963-3" cx="16" cy="13" r="4" fill="none"/></svg>
                             -->
-                                <h3>Indian Institute of Technology, Kanpur (IITK)</h3>
+                                <h3>Indian Institute of Technology, Kanpur - Present</h3>
                                 <h4>B.Tech, Material Science and Engineering <br>Double Major, Aerospace Engineering<br><span>CPI - 8.22/10</span></h4>
                             </div>
                             <div class="info2">
-                                <h3>Ryan International School, Mumbai</h3>
+                                <h3>Ryan International School, Mumbai - 2019</h3>
                                 <h4>Class XII, Higher Secondary Studies <br>CPI - 10/10 (95.8%)</h4>
                             </div>
                             <div class="info3">
-                                <h3>Ryan International School, Mumbai</h3>
+                                <h3>Ryan International School, Mumbai - 2017</h3>
                                 <h4>Class X, Secondary Studies <br>CPI - 10/10 (96.6%)</h4>
                             </div>
                         </div>
@@ -109,7 +109,7 @@
                             I wish to explore the fields of Propulsion, and Machine Learning as tool for mission design and planning. At the end of 
                             the day, I just want to be around people who are working hard to send humans to the Moon and Mars. 
                         </h3>
-                        <a href="#" class="p2button">Know More</a>
+                        <a href="profile.html" class="p2button">Know More</a>
                     </div> 
                 </div>
             </div>
@@ -237,12 +237,13 @@
                     <a href="https://github.com/Vishrant-Dave"><i class="fab fa-github"></i></a>
                     <a href="contactinfo.html"><i class="fa fa-envelope"></i></a>
                 </div>
+                <h4>&copy Vishrant Dave. Last edited: 18 October, 2021</h4>
             </div>
         </div>
     </div>
     <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
-    <script src="homepage.js"></script>
+    <script src="JavaScript/homepage.js"></script>
 </body>
 </html>
