--- a/profile.html
+++ b/profile.html
@@ -3,34 +3,66 @@
 <head>
     <meta charset="utf-8" />
     <title>Profile</title>
-    <link rel="stylesheet" href="styles-profile.css">
+    <link rel="stylesheet" href="CSS/styles-profile.css">
 </head>
 <body>
-    <div class="mars-box">
-        <div class="space">
-            <div class="ship">
-                <div class="ship-rotate">
-                    <div class="pod"></div>
-                    <div class="fuselage"></div>
+    <div class="container-contactpage">
+        <!---------------NAVBAR--------------->
+        <div class="navbar">
+            <div class="left-navbar">
+                <a href="index.html">
+                    <img src="images/logo_navbar_transparent.png" height = 50/>
+                </a>
+            </div>
+            <div class="right-navbar">
+                <div class="nav-link">
+                    <a href="index.html">Home</a>
+                </div>
+                <div class="nav-link">
+                    <a href="projects.html">Projects</a>
+                </div>
+                <div class="nav-link1">
+                    <a href="profile.html">Profile</a>
+                </div>
+                <div class="nav-link">
+                    <a href="blogs.html">Blogs</a>
+                </div>
+                <div class="nav-link">
+                    <a href="contactinfo.html">Contact</a>
                 </div>
             </div>
-            <div class="ship-shadow"></div>
-            <div class="mars">
-                <div class="tentacle"></div>
-                <div class="flag">
-                    <div class="small-tentacle"></div>
-                </div>
-                <div class="planet">
-                    <div class="surface"></div>
-                    <div class="crater1"></div>
-                    <div class="crater2"></div>
-                    <div class="crater3"></div>
-                </div>
-            </div>
-            <div class="test"></div>
         </div>
-    </div>
+        <!--------------MARS BACKGROUND------------------->
 
+        <div class="mars-box">
+            <div class="space">
+                <div class="mbox">
+                    <h3>Profile Page under construction...</h3>
+                </div>
+                <div class="ship">
+                    <div class="ship-rotate">
+                        <div class="pod"></div>
+                        <div class="fuselage"></div>
+                    </div>
+                </div>
+                <div class="ship-shadow"></div>
+                <div class="mars">
+                    <div class="tentacle"></div>
+                    <div class="flag">
+                        <div class="small-tentacle"></div>
+                    </div>
+                    <div class="planet">
+                        <div class="surface"></div>
+                        <div class="crater1"></div>
+                        <div class="crater2"></div>
+                        <div class="crater3"></div>
+                    </div>
+                </div>
+                <div class="test"></div>
+            </div>
+        </div>
+    
+    </div>
 
 </body>
 </html>
