--- a/projects.html
+++ b/projects.html
@@ -3,29 +3,38 @@
 <head>
     <meta charset="utf-8" />
     <title>Profile</title>
-    <link rel="stylesheet" href="projects.css">
+    <link rel="stylesheet" href="CSS/projects.css">
 </head>
 <body>
-    <div class="stage">
-        <div class="container">
-          <div class="ring">
-            <div class="img"></div>
-            <div class="img"></div>
-            <div class="img"></div>
-            <div class="img"></div>
-            <div class="img"></div>
-            <div class="img"></div>
-            <div class="img"></div>
-            <div class="img"></div>
-            <div class="img"></div>
-            <div class="img"></div>
-          </div>
+  <div class="container-contactpage">
+    <div class="navbar">
+        <div class="left-navbar">
+            <a href="index.html">
+                <img src="images/logo_navbar_transparent.png" height = 50/>
+            </a>
         </div>
-      </div>
+        <div class="right-navbar">
+            <div class="nav-link">
+                <a href="index.html">Home</a>
+            </div>
+            <div class="nav-link1">
+                <a href="projects.html">Projects</a>
+            </div>
+            <div class="nav-link">
+                <a href="profile.html">Profile</a>
+            </div>
+            <div class="nav-link">
+                <a href="blogs.html">Blogs</a>
+            </div>
+            <div class="nav-link">
+                <a href="contactinfo.html">Contact</a>
+            </div>
+        </div>
     </div>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
-    <script src="projects.js"></script>
+    <div class="mbox">
+        <h3>Projects Page under construction...</h3>
+    </div>
+  </div>
 
 </body>
 </html>
