--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                             Material Science along with Aerospace Engineering. To store cryogenic propellant in space is a huge challenge and hence 
                             I am currently working on projects that revolve around the thermal control systems of spacecraft. As I keep learning, 
                             I wish to explore the fields of Propulsion, and Machine Learning as tool for mission design and planning. At the end of 
-                            the day, I just want to be around people who are working hard to send humans to the Moon and Mars. 
+                            the day, I just want to be around people who are working hard to send humans to the Moon and beyond. 
                         </h3>
                         <a href="profile.html" class="p2button">Know More</a>
                     </div> 
