CV Update Feb 2022

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <h2>STUDENT <span>Researcher</span></h2>
                     <h3>Hi! I am Material Science and Aerospace Engineering Student<br> My research interests are 
                     Spacecraft Thermal Control Systems, <br> Propulsion and Orbital Dynamics </h3>
-                    <a href="PDF_Documents/Vishrant_CV.pdf" target="_blank" class="p1button">Resume</a>
+                    <a href="PDF_Documents/Vishrant_CV_Sem VI.pdf" target="_blank" class="p1button">Resume</a>
                 </div>
                 <div class="p1cube">
                     <div class="cube">
